--- a/telescopewindow.ui
+++ b/telescopewindow.ui
@@ -31,7 +31,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>Detector Settings</string>
+   <string>Telescope Settings</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
@@ -243,7 +243,7 @@
          </font>
         </property>
         <property name="text">
-         <string>Si-Detector</string>
+         <string>E-dE Telescope</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -251,7 +251,50 @@
        </widget>
       </item>
       <item>
-       <spacer name="verticalSpacer">
+       <spacer name="verticalSpacer_0">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="collimators_layout">
+        <item>
+         <widget class="QPushButton" name="first_button">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>1st collimator</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="second_button">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>2nd collimator</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_1">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
