--- a/targetwindow.ui
+++ b/targetwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>TelescopeWindow</class>
- <widget class="QDialog" name="TelescopeWindow">
+ <class>TargetWindow</class>
+ <widget class="QDialog" name="TargetWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -31,7 +31,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>Telescope Settings</string>
+   <string>Target Settings</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
@@ -207,11 +207,14 @@
           <property name="suffix">
            <string> deg.</string>
           </property>
+          <property name="decimals">
+           <number>0</number>
+          </property>
           <property name="maximum">
-           <double>180.000000000000000</double>
+           <double>360.000000000000000</double>
           </property>
           <property name="singleStep">
-           <double>0.010000000000000</double>
+           <double>45.000000000000000</double>
           </property>
          </widget>
         </item>
@@ -243,7 +246,7 @@
          </font>
         </property>
         <property name="text">
-         <string>E-dE Telescope</string>
+         <string>Thin Target</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -251,50 +254,93 @@
        </widget>
       </item>
       <item>
-       <spacer name="verticalSpacer_0">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
+       <widget class="QLabel" name="properties_label">
+        <property name="text">
+         <string>Width           &amp;         Height</string>
         </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
         </property>
-       </spacer>
+       </widget>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="collimators_layout">
+       <layout class="QHBoxLayout" name="properties_layout">
         <item>
-         <widget class="QPushButton" name="first_button">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>50</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>1st collimator</string>
-          </property>
-         </widget>
+         <layout class="QHBoxLayout" name="width_layout">
+          <item>
+           <widget class="QLabel" name="width_label">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>40</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>W:</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QDoubleSpinBox" name="width_box">
+            <property name="suffix">
+             <string> mm</string>
+            </property>
+            <property name="maximum">
+             <double>999999999.000000000000000</double>
+            </property>
+            <property name="singleStep">
+             <double>0.100000000000000</double>
+            </property>
+            <property name="value">
+             <double>10.000000000000000</double>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="second_button">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>50</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>2nd collimator</string>
-          </property>
-         </widget>
+         <layout class="QHBoxLayout" name="height_layout">
+          <item>
+           <widget class="QLabel" name="height_label">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>40</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>H:</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QDoubleSpinBox" name="height_box">
+            <property name="suffix">
+             <string> mm</string>
+            </property>
+            <property name="maximum">
+             <double>999999999.000000000000000</double>
+            </property>
+            <property name="singleStep">
+             <double>0.100000000000000</double>
+            </property>
+            <property name="value">
+             <double>10.000000000000000</double>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </item>
       <item>
-       <spacer name="verticalSpacer_1">
+       <spacer name="verticalSpacer_0">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
